--- a/css/style.css
+++ b/css/style.css
@@ -86,7 +86,19 @@ li{
     height: 60px;
     background-color: #222A45;
     z-index: -2;
+    padding-left: 70px;
+    color:#ffffff;
 }
+
+.breadcrumb{
+    height: 60px;
+    background-color: gray;
+    font-size: 1.4rem;
+    font-weight: 500;
+    display:flex;
+    align-items: center;
+}
+
 
 .content-wrapper {
     position: fixed;
@@ -126,7 +138,11 @@ li{
         display: none;
     }
 
+    .content-wrapper{
+        padding-left: 70px;
+    }
 
+   
  }
 
  @media (min-width: 992px){
@@ -135,4 +151,9 @@ li{
         background-color: #ffffff;
         padding-left: 25px;
     }
+
+    .topbar{
+        padding-left: 260px;
+    }
+
  }
